syntax = "proto3";

package school;

import "google/api/annotations.proto";

// 生成される Go パッケージの名前
option go_package = "github.com/yamagame/school-grpc-gateway/proto;school";

// School サービス
service Shool {
  // 研究室の一覧を返す
  rpc ListLabos(ListLabosRequest) returns (ListLabosResponse) {
    option (google.api.http) = {
      post: "/v1/school/labos"
      body: "*"
    };
  }
}

// グループ
message Group {
  int32 id = 1;
  string name = 2;
}

// プログラム
message Program {
  int32 id = 1;
  string name = 2;
}

// 建物
message Building {
  int32 id = 1;
  string name = 2;
}

// 研究室の情報
message Labo {
  int32 id = 1;
  string name = 2;
  Group group = 3;
  Program program = 4;
  Building building = 5;
}

// The request message containing the user's name
message ListLabosRequest {
  optional int32 page_size = 1;
  optional int32 offset = 2;
}

// The response message containing the greetings
message ListLabosResponse {
  repeated Labo labos = 1;
  int32 offset = 2;
}
